--- a/css/friend.css
+++ b/css/friend.css
@@ -30,6 +30,7 @@
 .friend__content .friend__name{
     display:block;
     margin-bottom: 5px;
+
 }
 
 
@@ -49,4 +50,35 @@
 .friend__content .friend__status
 {
     font-size: 12px;
+}
+
+.friend .friend__now-listening{
+    padding : 10px, 10px;
+    width: 120px;
+    border-radius: 15px;
+    border: 2px solid #5AAd77;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    
+    justify-content : center;
+}
+
+.friend__now-listening span {
+    opacity: 0.7;
+    margin-right: 8px;
+}
+
+.friend__now-listening i {
+    font-size: 1px;
+}
+   
+
+.friend__add-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 10px 15px;
+    border-radius: 5px;
 }
