--- a/css/chat.css
+++ b/css/chat.css
@@ -1,6 +1,16 @@
 
+.header-wrapper{
+    padding: 10px 0px;
+    background-color: white;
+    position: fixed;
+    top : 0;
+    z-index: 2;
+    width: 100%;
+}
+
 .chats-body{
-    padding:0;
+    padding:0px;
+    padding-top: 100px;
 }
 
 .chats-body .header,
@@ -8,26 +18,81 @@
     padding: 0px 20px;
 }
 
-.chat-screen{
+.chats-body{
     background-image: url(../images/chatBg.png);
-    min-height: 100vh;
+    min-height: 1000vh;
 }
 
-.chat__write{
+.chat__write--container{
     position: fixed;
-    bottom:50px;
-    width:80%;
+    bottom:0px;
     display:flex;
     margin: 0 auto;
     left: 0;
     right: 0;
-    background-color: #fcfcfc;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
     border-radius: 40px;
-    box-shadow: 0px 7px 20px rgba(0,0,0,0.2);
+   /* box-shadow: 0px 7px 20px rgba(0,0,0,0.2);
+*/
 }
+.chat__icon-left{
+    position: absolute;
+}
+.chat__icon-right{
+    position: absolute;
+    right:10px;
+}
+
+.chat__write:focus~.chat__icon{
+    opacity:0;
+}
+.chat__icon{
+    font-size : 14px;
+    transition: opacity 0.5s ease-in-out;
+}
+
+@keyframes float{
+    0%{
+        box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+
+    }
+    50%
+    {
+        box-shadow: 0 30px 60px -60x rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025)
+
+    }
+    100%
+    {
+        box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+        0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+
+    }
+}
+
+.chat__write{
+    bottom:0px;
+    margin: 0 auto;
+    width:100%;
+    border-radius: 20px;
+    padding: 10px 30px;
+    width: 100%;
+    border: none;
+    transition: all 0.5s ease-in;
+}
+
+.chat__write:focus{
+    outline:none;
+    width: 80%;
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+    animation: float 3s ease-in-out infinite forwards;
+
+    transform: translateY(-100px);
+}
+
 .chat__write i{
     font-size: 22px;
 }
@@ -42,9 +107,7 @@
     font-size: 14px;
 }
 
-.chat__write-column:input :focus{
-    outline:none;
-}
+
 
 .chat-screen .chat__messages{
     border-top: 1px solid #f7f7f7;
@@ -61,7 +124,8 @@
     padding: 5px 10px;
     border-radius: 10px;
     margin-bottom: 30px;
-    box-shadow: 0px 7px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
     text-transform: uppercase;
     font-weight: 700;
 
@@ -78,10 +142,23 @@
     width: 80%;
 }
 
+@keyframes spin{
+    from{
+
+        transform: none;
+    }
+    to {
+        transform : rotateY(1turn);
+    }
+}
+
 .incoming-message img{
     width: 30px;
     border-radius: 50%;
     margin-right: 20px;
+    animation:spin 1s linear infinite;
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
 }
 
 .incoming-message{
@@ -95,7 +172,8 @@
 
 .message .message__bubble{
     background-color: white;
-    box-shadow: 0px 7px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
+    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
     padding: 10px 20px;
     border-radius: 40px;
 }
@@ -115,4 +193,38 @@
 }
 .sent-message .message__bubble{
     border-bottom-right-radius: 0px ;
+}
+
+@keyframes incomingAnim{
+    from
+    {
+        opacity: 0;
+        transform: translateX(-200px);
+    }
+    to
+    {
+        opacity: 1;
+        transform: none;
+
+    }
+}
+.incoming-message{
+    animation: incomingAnim 0.5s ease-out forwards;
+}
+@keyframes sentAnim{
+    from
+    {
+        opacity: 0;
+        transform: translateX(+200px);
+    }
+    to
+    {
+        opacity: 1;
+        transform: none;
+
+    }
+}
+
+.sent-message{
+    animation: sentAnim 0.5s ease-out forwards;
 }
