--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,4 +1,4 @@
-.nav {
+.nav{
     background-color: #fcfcfc;
     position: fixed;
     width: 100%;
@@ -37,3 +37,22 @@
     align-items: center;
     border-radius: 100%;
 }
+
+@keyframes showNavBar{
+    from
+    {
+        transform: translateY(80px);
+    }
+    to
+    {
+        transform: none;
+    }
+
+}
+
+.nav{
+    transform: translateY(80px);
+    animation: showNavBar 0.5s ease-out forwards;
+    animation-delay: 0.5s;
+}
+
