--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 @import "more.css";
 @import "setting.css";
 @import "chat.css";
+@import "mobile.css";
 
 *{
     box-sizing: border-box;
@@ -27,3 +28,18 @@ a {
     color:inherit;
 }
 
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+main{
+    animation: fadeIn 0.5s ease-in-out;
+}
